# LecturePublic

./: .gitignore  README.rst  VERSIONING.md
.github/: EXAMPLES.md  README.md  VERSIONING.md  _local_test.sh  copilot-instructions.md  page-config.yml  pages-readme.md  pyproject.toml
.github/scripts/: generate_index.py
.github/templates/: index.html.j2  style.css
.github/workflows/: deploy-pages.yml
CoreMathematics/: CLAUDE.md  Makefile  lecture.typ  misho-text.typ  physica.typ  preface.typ  refs.yml  title.typ
CoreMathematics/skills/typst-description/: skill.md
CoreMathematics/skills/typst-exercise/: skill.md
CoreMathematics/unused/: deriv.typ
GeneralPhysics/: GP.sty  Makefile  MishoNote.cls  README.rst  gp1_boot1_deriv.tex  gp1_boot1_deriv_basic.tex  gp1_boot1_deriv_extra.tex  gp1_boot1_deriv_true.tex  gp1_boot1_deriv_true_extra.tex  gp1_boot2_vector.tex  gp1_boot3_integ.tex
Policies/: MishoNote.cls  generative_ai.tex  grading.tex  submission_guideline.tex
