[project]
name = "ghpages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]

[tool.djlint]
max_attribute_length = 100
max_line_length = 120
ignore = "H023"
